--- a/assets/style.css
+++ b/assets/style.css
@@ -210,7 +210,7 @@
 
 #contact {
   margin: auto;
-  background-color:#9E9E9E;
+  background-color:white;
   position: relative;
   padding-inline: 100px;
   padding-block: 100px;
@@ -241,15 +241,16 @@ form {
 
 form input {
   width: 100%;
-  background-color: transparent;
+  background-color: white;
   border: solid 1px;
   height: 2.5em;
   margin-bottom: 20px;
+  
 }
 
 form textarea {
   width: 100%;
-  background-color: transparent;
+  background-color: white;
   border: solid 1px;
   height: 5em;
   line-height: 2.5em;
