--- a/assets/style.css
+++ b/assets/style.css
@@ -51,7 +51,7 @@
 
 #about {
   display: flex;
-  background-color: #9E9E9E;
+  background-color: #ffffff;
   padding-inline: 100px;
   padding-block: 100px;
   position: relative;
